Converted Taura CSS clases to Roll20 valid classes

--- a/Taura/TauraSheet.css
+++ b/Taura/TauraSheet.css
@@ -1,6 +1,6 @@
 input,
 textarea {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.sheet-5);
   border-radius: 5px;
   position: absolute;
   resize: none;
@@ -17,36 +17,36 @@ input[type='number'] {
   -moz-appearance: textfield; /* Firefox */
 }
 
-.character-sheet {
+.sheet-character-sheet {
   width: 867px;
   height: 1121px;
-  background: url('TauraSheet.png') top left no-repeat;
+  background: url('TauraSheet.sheet-png') top left no-repeat;
 }
 
 /* Personal details */
-.character-name {
+.sheet-character-name {
   top: 45px;
   left: 152px;
   width: 240px;
 }
 
-.character-race {
+.sheet-character-race {
   left: 179px;
   top: 70px;
   width: 213px;
 }
 
-.character-concept {
+.sheet-character-concept {
   left: 157px;
   top: 95px;
   width: 235px;
 }
 
 /* Attributes */
-.fortitude-value,
-.reflexes-value,
-.willpower-value,
-.intellect-value {
+.sheet-fortitude-value,
+.sheet-reflexes-value,
+.sheet-willpower-value,
+.sheet-intellect-value {
   left: 106px;
   text-align: center;
   font-size: 20;
@@ -55,78 +55,78 @@ input[type='number'] {
   height: 30px;
 }
 
-.fortitude-value {
+.sheet-fortitude-value {
   top: 160px;
 }
 
-.reflexes-value {
+.sheet-reflexes-value {
   top: 246px;
 }
 
-.willpower-value {
+.sheet-willpower-value {
   top: 329px;
 }
 
-.intellect-value {
+.sheet-intellect-value {
   top: 413px;
 }
 
-.fortitude-aspect,
-.reflexes-aspect,
-.willpower-aspect,
-.intellect-aspect {
+.sheet-fortitude-aspect,
+.sheet-reflexes-aspect,
+.sheet-willpower-aspect,
+.sheet-intellect-aspect {
   left: 144px;
   height: 24px;
   width: 198px;
 }
 
-.fortitude-aspect {
+.sheet-fortitude-aspect {
   top: 162px;
 }
 
-.reflexes-aspect {
+.sheet-reflexes-aspect {
   top: 246px;
 }
 
-.willpower-aspect {
+.sheet-willpower-aspect {
   top: 330px;
 }
 
-.intellect-aspect {
+.sheet-intellect-aspect {
   top: 414px;
 }
 
 /* General checkbox configuration */
-.health-point-1,
-.health-point-2,
-.health-point-3,
-.health-point-4,
-.health-point-5,
-.fatigue-point-1,
-.fatigue-point-2,
-.fatigue-point-3,
-.fatigue-point-4,
-.fatigue-point-5,
-.position-point-1,
-.position-point-2,
-.position-point-3,
-.position-point-4,
-.position-point-5,
-.sanity-point-1,
-.sanity-point-2,
-.sanity-point-3,
-.sanity-point-4,
-.sanity-point-5,
-.drama-point-1,
-.drama-point-2,
-.drama-point-3,
-.drama-point-4,
-.drama-point-5,
-.drama-point-6,
-.drama-point-7,
-.drama-point-8,
-.drama-point-9,
-.drama-point-10 {
+.sheet-health-point-1,
+.sheet-health-point-2,
+.sheet-health-point-3,
+.sheet-health-point-4,
+.sheet-health-point-5,
+.sheet-fatigue-point-1,
+.sheet-fatigue-point-2,
+.sheet-fatigue-point-3,
+.sheet-fatigue-point-4,
+.sheet-fatigue-point-5,
+.sheet-position-point-1,
+.sheet-position-point-2,
+.sheet-position-point-3,
+.sheet-position-point-4,
+.sheet-position-point-5,
+.sheet-sanity-point-1,
+.sheet-sanity-point-2,
+.sheet-sanity-point-3,
+.sheet-sanity-point-4,
+.sheet-sanity-point-5,
+.sheet-drama-point-1,
+.sheet-drama-point-2,
+.sheet-drama-point-3,
+.sheet-drama-point-4,
+.sheet-drama-point-5,
+.sheet-drama-point-6,
+.sheet-drama-point-7,
+.sheet-drama-point-8,
+.sheet-drama-point-9,
+.sheet-drama-point-10 {
   -webkit-appearance: none;
   background-color: white;
   border-radius: 50%;
@@ -138,157 +138,157 @@ input[type='number'] {
   width: 15px;
 }
 
-.health-point-1:checked,
-.health-point-2:checked,
-.health-point-3:checked,
-.health-point-4:checked,
-.health-point-5:checked,
-.fatigue-point-1:checked,
-.fatigue-point-2:checked,
-.fatigue-point-3:checked,
-.fatigue-point-4:checked,
-.fatigue-point-5:checked,
-.position-point-1:checked,
-.position-point-2:checked,
-.position-point-3:checked,
-.position-point-4:checked,
-.position-point-5:checked,
-.sanity-point-1:checked,
-.sanity-point-2:checked,
-.sanity-point-3:checked,
-.sanity-point-4:checked,
-.sanity-point-5:checked,
-.drama-point-1:checked,
-.drama-point-2:checked,
-.drama-point-3:checked,
-.drama-point-4:checked,
-.drama-point-5:checked,
-.drama-point-6:checked,
-.drama-point-7:checked,
-.drama-point-8:checked,
-.drama-point-9:checked,
-.drama-point-10:checked {
+.sheet-health-point-1:checked,
+.sheet-health-point-2:checked,
+.sheet-health-point-3:checked,
+.sheet-health-point-4:checked,
+.sheet-health-point-5:checked,
+.sheet-fatigue-point-1:checked,
+.sheet-fatigue-point-2:checked,
+.sheet-fatigue-point-3:checked,
+.sheet-fatigue-point-4:checked,
+.sheet-fatigue-point-5:checked,
+.sheet-position-point-1:checked,
+.sheet-position-point-2:checked,
+.sheet-position-point-3:checked,
+.sheet-position-point-4:checked,
+.sheet-position-point-5:checked,
+.sheet-sanity-point-1:checked,
+.sheet-sanity-point-2:checked,
+.sheet-sanity-point-3:checked,
+.sheet-sanity-point-4:checked,
+.sheet-sanity-point-5:checked,
+.sheet-drama-point-1:checked,
+.sheet-drama-point-2:checked,
+.sheet-drama-point-3:checked,
+.sheet-drama-point-4:checked,
+.sheet-drama-point-5:checked,
+.sheet-drama-point-6:checked,
+.sheet-drama-point-7:checked,
+.sheet-drama-point-8:checked,
+.sheet-drama-point-9:checked,
+.sheet-drama-point-10:checked {
   background-color: black;
 }
 
 /* Health points */
-.health-point-1,
-.health-point-2,
-.health-point-3,
-.health-point-4,
-.health-point-5 {
+.sheet-health-point-1,
+.sheet-health-point-2,
+.sheet-health-point-3,
+.sheet-health-point-4,
+.sheet-health-point-5 {
   top: 190px;
 }
 
-.health-point-1 {
+.sheet-health-point-1 {
   left: 219px;
 }
 
-.health-point-2 {
+.sheet-health-point-2 {
   left: 243px;
 }
 
-.health-point-3 {
+.sheet-health-point-3 {
   left: 267px;
 }
 
-.health-point-4 {
+.sheet-health-point-4 {
   left: 291px;
 }
 
-.health-point-5 {
+.sheet-health-point-5 {
   left: 315px;
 }
 
 /* Fatigue points */
-.fatigue-point-1,
-.fatigue-point-2,
-.fatigue-point-3,
-.fatigue-point-4,
-.fatigue-point-5 {
+.sheet-fatigue-point-1,
+.sheet-fatigue-point-2,
+.sheet-fatigue-point-3,
+.sheet-fatigue-point-4,
+.sheet-fatigue-point-5 {
   top: 272px;
 }
 
-.fatigue-point-1 {
+.sheet-fatigue-point-1 {
   left: 219px;
 }
 
-.fatigue-point-2 {
+.sheet-fatigue-point-2 {
   left: 243px;
 }
 
-.fatigue-point-3 {
+.sheet-fatigue-point-3 {
   left: 267px;
 }
 
-.fatigue-point-4 {
+.sheet-fatigue-point-4 {
   left: 291px;
 }
 
-.fatigue-point-5 {
+.sheet-fatigue-point-5 {
   left: 315px;
 }
 
 /* Position points */
-.position-point-1,
-.position-point-2,
-.position-point-3,
-.position-point-4,
-.position-point-5 {
+.sheet-position-point-1,
+.sheet-position-point-2,
+.sheet-position-point-3,
+.sheet-position-point-4,
+.sheet-position-point-5 {
   top: 358px;
 }
 
-.position-point-1 {
+.sheet-position-point-1 {
   left: 219px;
 }
 
-.position-point-2 {
+.sheet-position-point-2 {
   left: 243px;
 }
 
-.position-point-3 {
+.sheet-position-point-3 {
   left: 267px;
 }
 
-.position-point-4 {
+.sheet-position-point-4 {
   left: 291px;
 }
 
-.position-point-5 {
+.sheet-position-point-5 {
   left: 315px;
 }
 
 /* Sanity points */
-.sanity-point-1,
-.sanity-point-2,
-.sanity-point-3,
-.sanity-point-4,
-.sanity-point-5 {
+.sheet-sanity-point-1,
+.sheet-sanity-point-2,
+.sheet-sanity-point-3,
+.sheet-sanity-point-4,
+.sheet-sanity-point-5 {
   top: 442px;
 }
 
-.sanity-point-1 {
+.sheet-sanity-point-1 {
   left: 219px;
 }
 
-.sanity-point-2 {
+.sheet-sanity-point-2 {
   left: 243px;
 }
 
-.sanity-point-3 {
+.sheet-sanity-point-3 {
   left: 267px;
 }
 
-.sanity-point-4 {
+.sheet-sanity-point-4 {
   left: 291px;
 }
 
-.sanity-point-5 {
+.sheet-sanity-point-5 {
   left: 315px;
 }
 
 /* Drama points */
-.drama-value {
+.sheet-drama-value {
   left: 471px;
   top: 162px;
   width: 60px;
@@ -298,60 +298,60 @@ input[type='number'] {
   font-size: 30px;
 }
 
-.drama-point-1 {
+.sheet-drama-point-1 {
   top: 175px;
   left: 437px;
 }
 
-.drama-point-2 {
+.sheet-drama-point-2 {
   top: 195px;
   left: 439px;
 }
 
-.drama-point-3 {
+.sheet-drama-point-3 {
   top: 214px;
   left: 448px;
 }
 
-.drama-point-4 {
+.sheet-drama-point-4 {
   top: 227px;
   left: 462px;
 }
 
-.drama-point-5 {
+.sheet-drama-point-5 {
   top: 235px;
   left: 480px;
 }
 
-.drama-point-6 {
+.sheet-drama-point-6 {
   top: 234px;
   left: 502px;
 }
 
-.drama-point-7 {
+.sheet-drama-point-7 {
   top: 226px;
   left: 521px;
 }
 
-.drama-point-8 {
+.sheet-drama-point-8 {
   top: 213px;
   left: 535px;
 }
 
-.drama-point-9 {
+.sheet-drama-point-9 {
   top: 194px;
   left: 544px;
 }
 
-.drama-point-10 {
+.sheet-drama-point-10 {
   top: 173px;
   left: 545px;
 }
 
 /* Approaches points */
-.discipline-value,
-.rush-value,
-.caution-value {
+.sheet-discipline-value,
+.sheet-rush-value,
+.sheet-caution-value {
   border-radius: 50%;
   font-size: 19px;
   height: 33px;
@@ -359,28 +359,28 @@ input[type='number'] {
   width: 33px;
 }
 
-.discipline-value {
+.sheet-discipline-value {
   left: 716px;
   top: 133px;
 }
 
-.rush-value {
+.sheet-rush-value {
   left: 679px;
   top: 201px;
 }
 
-.caution-value {
+.sheet-caution-value {
   left: 756px;
   top: 201px;
 }
 
 /* Additional stats */
-.initiative-value,
-.melee-damage-value,
-.ranged-damage-value,
-.supernatural-damage-value,
-.defense-value,
-.unprepared-value {
+.sheet-initiative-value,
+.sheet-melee-damage-value,
+.sheet-ranged-damage-value,
+.sheet-supernatural-damage-value,
+.sheet-defense-value,
+.sheet-unprepared-value {
   border-radius: 50%;
   font-size: 14px;
   height: 24px;
@@ -390,66 +390,66 @@ input[type='number'] {
   width: 24px;
 }
 
-.melee-damage-value {
+.sheet-melee-damage-value {
   top: 308px;
 }
 
-.ranged-damage-value {
+.sheet-ranged-damage-value {
   top: 336px;
 }
 
-.supernatural-damage-value {
+.sheet-supernatural-damage-value {
   top: 363px;
 }
 
-.defense-value {
+.sheet-defense-value {
   top: 391px;
 }
 
-.unprepared-value {
+.sheet-unprepared-value {
   top: 418px;
 }
 
-.weapon-1-value,
-.weapon-2-value,
-.armor-value,
-.reinforcement-value,
-.shield-value,
-.toughness-value,
-.pa-value,
-.minus-defense-value {
+.sheet-weapon-1-value,
+.sheet-weapon-2-value,
+.sheet-armor-value,
+.sheet-reinforcement-value,
+.sheet-shield-value,
+.sheet-toughness-value,
+.sheet-pa-value,
+.sheet-minus-defense-value {
   top: 280px;
   left: 634px;
   width: 186px;
 }
 
-.weapon-2-value {
+.sheet-weapon-2-value {
   top: 307px;
   left: 603px;
   width: 226px;
 }
 
-.armor-value {
+.sheet-armor-value {
   top: 335px;
   left: 655px;
   width: 173px;
 }
 
-.reinforcement-value {
+.sheet-reinforcement-value {
   top: 362px;
   left: 649px;
   width: 180px;
 }
 
-.shield-value {
+.sheet-shield-value {
   top: 391px;
   left: 637px;
   width: 192px;
 }
 
-.toughness-value,
-.pa-value,
-.minus-defense-value {
+.sheet-toughness-value,
+.sheet-pa-value,
+.sheet-minus-defense-value {
   border-radius: 50%;
   font-size: 14px;
   height: 25px;
@@ -459,22 +459,22 @@ input[type='number'] {
   width: 25px;
 }
 
-.pa-value {
+.sheet-pa-value {
   left: 717px;
 }
 
-.minus-defense-value {
+.sheet-minus-defense-value {
   left: 786px;
 }
 
-.hitos {
+.sheet-hitos {
   top: 529px;
   left: 137px;
   width: 400px;
   height: 200px;
 }
 
-.talents {
+.sheet-talents {
   top: 529px;
   left: 588px;
   width: 203px;
@@ -489,30 +489,30 @@ hr {
   width: 208px;
 }
 
-.label {
+.sheet-label {
   left: 624px;
   padding-top: 3px;
   position: absolute;
 }
 
-.potence,
-.potence-value {
+.sheet-potence,
+.sheet-potence-value {
   top: 670px;
 }
 
-.structure,
-.structure-value {
+.sheet-structure,
+.sheet-structure-value {
   top: 695px;
 }
 
-.versatility,
-.versatility-value {
+.sheet-versatility,
+.sheet-versatility-value {
   top: 720;
 }
 
-.potence-value,
-.structure-value,
-.versatility-value {
+.sheet-potence-value,
+.sheet-structure-value,
+.sheet-versatility-value {
   border-radius: 50%;
   font-size: 14px;
   height: 24px;
@@ -521,33 +521,33 @@ hr {
   width: 24px;
 }
 
-.ship-talents {
+.sheet-ship-talents {
   height: 41px;
   left: 588px;
   width: 204px;
   top: 747px;
 }
 
-.problem {
+.sheet-problem {
   top: 769px;
   left: 137px;
   width: 400px;
 }
 
-.consecuences,
-.equipment,
-.relationships {
+.sheet-consecuences,
+.sheet-equipment,
+.sheet-relationships {
   top: 877px;
   left: 137px;
   width: 196px;
   height: 155px;
 }
 
-.equipment {
+.sheet-equipment {
   left: 336px;
 }
 
-.relationships {
+.sheet-relationships {
   left: 603px;
   width: 173px;
 }
