[5th Edition OGL] Fix spell checkbox

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1771,12 +1771,13 @@ span.sheet-spellconcentration
 }
 
 .sheet-spell .sheet-prep-box {
-    -webkit-appearance: checkbox;
-    -moz-appearance: checkbox;
+    -webkit-appearance: none;
+    -moz-appearance: none;
     opacity: 0;
     z-index: 2;
     position: relative;
-    width: 12px
+    width: 12px;
+    height: 12px;
 }
 
 .charsheet .sheet-spell .sheet-display button[type=roll].sheet-spellcard {
