[5th Edition OGL] Expand spells

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1753,6 +1753,103 @@ span.sheet-spellconcentration
     color: black;
 }
 
+.sheet-spell .sheet-details-flag {
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    right: 23px;
+    width: 18px;
+    height: 18px;
+    z-index: 2;
+}
+
+.sheet-spell .sheet-details-flag + span {
+    position: absolute;
+    top: 0px;
+    right: 23px;
+    white-space: nowrap;
+    width: 18px;
+    height: 18px;
+    font-size: 20px;
+    font-family: pictos;
+    color: #A0A0A0;
+    cursor: pointer;
+    margin-top: 0px;
+    display: none;
+}
+
+.sheet-spell .sheet-details-flag:checked + span {
+    display: block;
+    color: #000000;
+}
+
+.sheet-spell:hover .sheet-details-flag + span {
+    display: block;
+}
+
+.sheet-spell .sheet-details-flag ~ .sheet-details {
+    display: none;
+}
+
+.sheet-spell .sheet-details-flag:checked ~ .sheet-details {
+    display: block;
+}
+
+.sheet-spell .sheet-details {
+    margin: 15px 0;
+}
+
+.sheet-spell .sheet-details span {
+    display: inline;
+    font-weight: normal;
+}
+
+.sheet-spell .sheet-details span.sheet-bold {
+    font-weight: bold;
+}
+
+.sheet-spell .sheet-details .sheet-italics {
+    font-style: italic;
+}
+
+.sheet-spell .sheet-details input[type="checkbox"] {
+    display: none;
+}
+
+.sheet-spell .sheet-details input[type="checkbox"] + span {
+    display: none;
+}
+
+.sheet-spell .sheet-details input[type="checkbox"]:checked + span {
+    display: inline;
+}
+
+.sheet-spell .sheet-details span[name="attr_spellname"] {
+    font-family: "Times New Roman", Times, serif;
+    font-size: 16px;
+    text-transform: capitalize;
+    font-variant: small-caps;
+    color: rgb(126, 45, 64);
+}
+
+.sheet-spell .sheet-details span[name="attr_innate"] {
+    font-family: "Times New Roman", Times, serif;
+    font-size: 16px;
+    color: #A0A0A0;
+}
+
+.sheet-spell .sheet-details input[name="attr_spellcomp_materials"] {
+    display: none;
+}
+
+.sheet-spell .sheet-details input[name="attr_spellcomp_materials"] + span {
+    display: none;
+}
+
+.sheet-spell .sheet-details input[name="attr_spellcomp_materials"]:valid + span {
+    display: inline;
+}
+
 .sheet-spell .sheet-display {
     position: relative;
 }
