[5th Edition OGL] Compendium link

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1778,6 +1778,21 @@ span.sheet-spellconcentration
     display: none;
 }
 
+.sheet-spell .sheet-details button.sheet-spell_link::before {
+    content: '|';
+}
+
+.sheet-spell .sheet-details button.sheet-spell_link {
+    float: right;
+    border: none;
+    background: none;
+    color: #A0A0A0;
+}
+
+.sheet-spell .sheet-details button.sheet-spell_link:hover {
+    color: #000000;
+}
+
 .sheet-spell .sheet-details-flag:checked + span {
     display: block;
     color: #000000;
