--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -125,6 +125,40 @@ div.sheet-body {
 .repcontrol{
     grid-column:1 / -1;
 }
+.sheet-statheader-container{
+    display:grid;
+    align-items:center;
+    grid-template-columns: 400px 100px 200px
+}
+.sheet-whispertoggle-container{
+    display:grid;
+    grid-template-columns: 0px 100px 0px 100px
+}
+.sheet-toggle-left, .sheet-toggle-right{
+    width: 100px;
+    height: 20px;
+    margin-right: -100px;
+    margin-bottom: 2px;
+    cursor: pointer;
+    z-index: 1;
+    opacity: 0;
+}
+.sheet-toggle-left + span::before, .sheet-toggle-right + span::before{
+    content:attr(title);
+    border: solid 2px #889987;
+    text-align: center;
+    display: inline-block;
+    
+    background: #889987;
+
+    width: 100px;
+    height: 20px;
+    font-size: 18px;
+}
+.sheet-toggle-left:checked + span::before, .sheet-toggle-right:checked + span::before{
+    background: #9cb09b;
+    border-bottom-color: black;
+}
 .sheet-name-grid-container{
     display:grid;
     align-items:center;
@@ -208,7 +242,7 @@ button[type=roll].sheet-rolldice::before {
 .sheet-wealth-field, .sheet-bonus-field, .sheet-occ-field, .sheet-skill-notes, .sheet-elective-field, 
 .sheet-secondary-field, .sheet-mystic-field, .sheet-melee-field, .sheet-ranged-field, 
 .sheet-combat-field, .sheet-combat-textarea, .sheet-save-field, .sheet-notes-field, .sheet-notes-textarea, 
-.sheet-weight-box, .sheet-weightsub-box{
+.sheet-weight-box, .sheet-weightsub-box, .sheet-whisper-select{
     background-color:#ebebeb;
 }
 .sheet-fraction-grid-container{
