--- a/Shadowrun5thEdition/src/scss/_global.scss
+++ b/Shadowrun5thEdition/src/scss/_global.scss
@@ -10,7 +10,7 @@
 		&[type='roll'],
 		&[type='action'] {
 			font-size: 1em;
-			margin: 0px;
+			margin: 0px !important;
 			padding: 1px 2px;
 
             border: {
