--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -1,4 +1,4 @@
-input(name='attr_version' type='hidden' value='3.0')
+input(name='attr_version' type='hidden' value='3.01')
 
 //- CHARACTER SHETE PAGE
 input.sheet_type(name='attr_sheet_type' type='hidden' value='pc')
@@ -56,58 +56,68 @@ include src/pug/_variables.pug
 				h1(data-i18n='skills') Skills
 			.border-box.skill-box
 				.pc-box.medium-box
-					.row-long
-						each val in ['Skill', 'RTG', 'Attribute', 'Limit']
-							- const translationKey = val.toLowerCase();
-							h2(data-i18n=translationKey) #{val}
+					.rows.repeating-container
+						.row-long.headers
+							each val in ['Skill', 'RTG', 'Attribute', 'Limit']
+								- const translationKey = val.toLowerCase();
+								h2(data-i18n=translationKey) #{val}
 					input.tab-switch(name='attr_skill_toggle' type='hidden' value='active')
 					each val, key in {'active': ['active', 'Agility', 'Physical'],'knowledge':['know', 'Logic', 'Mental'], 'language': ['lang', 'Charisma', 'Social']}
 						div(class='skills-'+val[0])
-							if key === 'active'
-								.row-long
-									input(name='attr_default_display' type='hidden' value='Agility')
-									+rollButton('default', '@{default_display}', '@{default_attribute}+-1')
-									span.text-align-center -
-									select.attribute-select(name='attr_default_attribute' title='Skill attribute')
-										+attributeSelect('Agility')
-									select.limit-select(name='attr_limit' title='Skill limit')
-										+limitSelect('Physical')
-							fieldset(class='repeating_' + key)
-								input(name='attr_display_rating' type='hidden')
-								input(name='attr_display_specialization' type='hidden' value='')
-								input(name='attr_display_limit' type='hidden' value=val[2])
-								input(name='attr_display_attribute' type='hidden' value=val[1])
-								input(name='attr_dicepool' type='hidden' value='0')
-								.row-long
-									input.settings-toggle(name='attr_flag' type='hidden' value='settings' title='@{repeating_'+val[0]+'_${x}_flag')
+							.rows.repeating-container
+								if key === 'active'
+									.row-long
+										input(name='attr_default_display' type='hidden' value='Agility')
+										+rollButton('default', '@{default_display}', '@{default_attribute}+-1')
+										span.text-align-center -
+										select.attribute-select(name='attr_default_attribute' title='Skill attribute')
+											+attributeSelect('Agility')
+										select.limit-select(name='attr_limit' title='Skill limit')
+											+limitSelect('Physical')
+								fieldset(class='repeating_' + key)
+									- const skillsRepeatingSection = `@{repeating_${val[0]}`+'_${x}';
+
+									input(name='attr_display_rating' type='hidden')
+									input(name='attr_display_specialization' type='hidden' value='')
+									input(name='attr_display_limit' type='hidden' value=val[2])
+									input(name='attr_display_attribute' type='hidden' value=val[1])
+									input(name='attr_dicepool' type='hidden' value='0')
+
+									input.settings-flag(name='attr_flag' type='hidden' value='settings' title=`${repeatingSection}_flag}`)
 									.buttons
 										//- SKILL BUTTON
 										+skillButton(false)
 										//- SPECILIZATION BUTTON
 										+skillButton(true)
-									span.text-align-center(name='attr_display_rating' title='@{repeating_'+val[0]+'_${x}_display_rating}')
-									select.attribute-select(name='attr_attribute' title='@{repeating_'+val[0]+'_${x}_attribute}')
+									span.text-align-center(name='attr_display_rating' title=`${skillsRepeatingSection}_display_rating}`)
+									select.attribute-select(name='attr_attribute' title=`${repeatingSection}_attribute}`)
 										+attributeSelect(val[1])
-									select.limit-select(name='attr_limit' value='physical_limit' title='@{repeating_'+val[0]+'_${x}_limit}')
+									select.limit-select(name='attr_limit' value='physical_limit' title=`${repeatingSection}_limit}`)
 										+limitSelect(val[2])
-									button.pictos(name='act_skill' type='action') x
-									if key === 'active'
-										select.skill-select.settings(name='attr_skill' value='Close Combat Group' title='@{repeating_'+val[0]+'_${x}_skill}')
-											include src/html/skillselect.html
-									else
-										label.settings(data-i18n-title='skill' title='skill')
-											input(name='attr_skill' placeholder=key type='text' title='@{repeating_'+val[0]+'_${x}_skill}')
-									label.settings(data-i18n-title='rating' title='rating')
-										input(name='attr_rating' min='0' placeholder='0' type='number' title='@{repeating_'+val[0]+'_${x}_rating}')
-									label.settings(data-i18n-title='ratingmodifier' title='Rating Modifier')
-										span(data-i18n='ratingmodifier') Rating Modifier
-										input(name='attr_rating_modifier' placeholder='0' type='number' title='@{repeating_'+val[0]+'_${x}_rating_modifier}')
-									label.settings(data-i18n-title='specializations' title='Specializations') 
-										span(data-i18n='specializations') Specializations
-										input(name='attr_specialization}' placeholder='Specalizations' type='text' title='@{repeating_'+val[0]+'_${x}_specialization}')
-									label.settings(data-i18n-title='notes' title='notes')
-										span(data-i18n='notes') Notes
-										textarea(name='attr_notes' value='' placeholder='Notes' title='@{repeating_'+val[0]+'_${x}_notes}')
+									input.collapse-flag(name='attr_display_flag' type='checkbox' checked)
+									span.pictos i
+									input.settings-flag(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+									span.pictos x
+									.collapse
+										span(name='attr_notes')
+									.settings
+										if key === 'active'
+											select.skill-select(name='attr_skill' value='Close Combat Group' title=`${repeatingSection}_skill}`)
+												include src/html/skillselect.html
+										else
+											label(data-i18n-title='skill' title='skill')
+												input(name='attr_skill' placeholder=key type='text' title=`${repeatingSection}_skill}`)
+										label(data-i18n-title='rating' title='rating')
+											input(name='attr_rating' min='0' placeholder='0' type='number' title=`${repeatingSection}_rating}`)
+										label(data-i18n-title='ratingmodifier' title='Rating Modifier')
+											span(data-i18n='ratingmodifier') Rating Modifier
+											input(name='attr_rating_modifier' placeholder='0' type='number' title=`${repeatingSection}_rating_modifier}`)
+										label(data-i18n-title='specialization' title='specialization') 
+											span(data-i18n='specialization') specialization
+											input(name='attr_specialization}' placeholder='Specalizations' type='text' title=`${repeatingSection}_specialization}`)
+										label(data-i18n-title='notes' title='notes')
+											span(data-i18n='notes') Notes
+											textarea(name='attr_notes' value='' placeholder='Notes' title=`${repeatingSection}_notes}`)
 
 
 	//- CORE TAB
@@ -148,8 +158,9 @@ include src/pug/_variables.pug
 				.pc-box.medium-box
 					+fadeDrainSection('drain')
 					input.magic-toggle(name='attr_magic_toggle' type='hidden' value='spells')
-					include src/magic.html
-
+					.row-long.headers
+						each val in ['spells', 'type', 'range', 'duration', 'drain']
+							h2(data-i18n=val) #{val}
 
 					.magic-spells.spellsForumlas
 						+pcSpells('spell')
@@ -168,7 +179,7 @@ include src/pug/_variables.pug
 									span.center(name='attr_'+val)
 								input.collapse-flag(name='attr_display_flag' type='checkbox')
 								span.pictos i
-								input.settings-toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+								input.settings-flag(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 								span.pictos x
 								.collapse
 									span(name='attr_note')
@@ -187,7 +198,41 @@ include src/pug/_variables.pug
 											option(data-i18n='special' value='Special') special
 									h3(data-i18n='notes') notes
 									label(data-i18n-title='notes' title='notes')
-										textarea(name='attr_note' placeholder='Notes' title='@{repeating_preperations_${x}_note}' type='text' value='')
+										textarea(name='attr_notes' placeholder='Notes' title='@{repeating_preperations_${x}_notes}' type='text' value='')
+
+					.magic-rituals
+						.rows.repeating-container
+							fieldset(class=`repeating_ritua`+type)
+								- const repeatingRitualSection = `@{repeating_${type}`+'_${x}';
+								input(name='attr_dicepool' type='hidden' value='0')
+								+displayRollButton(pcSpellButton, true)
+								each val in ['type', 'range', 'duration', 'drain']
+									span.center(name='attr_'+val)
+								input.collapse-flag(name='attr_display_flag' type='checkbox' checked)
+								span.pictos i
+								input.settings-flag(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+								span.pictos x
+								.collapse
+									span(name='attr_notes')
+								.settings
+									label(data-i18n-title='name' title='name')
+										input(name="attr_name" placeholder="Curse (MATERIAL LINK, SPELL)" title=`@{${repeatingRitualSection}_name}` type="text")
+									.rows
+										h3(data-i18n="skill") skill
+										select(name='attr_skill' title=`@{${repeatingRitualSection}_skill}`)
+											option(data-i18n="sorcerygroup" value="@{sorcery}") Sorcery Group
+											option(data-i18n="ritualspellcasting" value="@{ritualspell}" selected) Sorcery Group
+										h3(data-i18n="specialization") specialization
+										label(data-i18n-title="specialization" title="specialization")
+											input(name="attr_spec" title=`@{${repeatingRitualSection}_spec}` type="checkbox" value="2")
+										h3(data-i18n="modifier") modifier
+										label(data-i18n-title="modifier" title="modifier")
+											input(name="attr_dicepool_modifier" title=`@{${repeatingRitualSection}_dicepool_modifier}` type="number")
+									h3(data-i18n='notes') notes
+									label(data-i18n-title='notes' title='notes')
+										textarea(name='attr_notes' placeholder='Notes' title=repeatingSection+'note}' type='text' value='')
+
+
 
 
 		.pc-row
@@ -235,3 +280,4 @@ include src/pug/scripts.js
 
 //- CHUMMER IMPORTER
 include src/importer.html
+include src/js/importer.js
