--- a/Shadowrun5thEdition/src/scss/_npc.scss
+++ b/Shadowrun5thEdition/src/scss/_npc.scss
@@ -278,7 +278,23 @@
 				grid-template-columns: 5em 3em 2fr 2fr 3em 3em 3em 1fr 3em 3em 1.25em;
 				grid-column-gap: 0.2%;
 
-				label[data-i18n-title='notes'] { grid-column: 1 / 12; }
+				label[data-i18n-title='notes'] { grid-column: 1 / 11; }
+				label[data-i18n-title='primary'] { 
+					grid-area: 3 / 11 / 3 / 11; 
+
+					input.sheet-flag-primary { 
+						position: absolute;
+						opacity: 0;
+						z-index: 2;
+
+						&:checked + span {
+							color: $gold;
+						}
+					}
+
+					span { position: absolute; }
+				}
+
 			}
 
 			span[name='attr_weapon_dice'] {
@@ -400,7 +416,7 @@
 				display: inline-block;
 				width: 100%;
 
-				input[name="attr_program_on"] {
+				input[name='attr_program_on'] {
 					left: 2%;
 
 					&  + span { left: 2.5%;}
